controllers/testdata/deployment_except_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singledeployment-sample-1
  namespace: system
  labels:
    app: singledeployment-sample-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: singledeployment-sample-1
  template:
    metadata:
      labels:
        app: singledeployment-sample-1
    spec:
      containers:
        - name: singledeployment-sample-1
          image: nginx:latest
          ports:
            - containerPort: 8080
