controllers/testdata/deployment_except_2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: singledeployment-sample-2
  namespace: default
  labels:
    app: singledeployment-sample-2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: singledeployment-sample-2
  template:
    metadata:
      labels:
        app: singledeployment-sample-2
    spec:
      containers:
        - name: singledeployment-sample-2
          image: nginx:1.0
          ports:
            - containerPort: 8080
