controllers/testdata/ingress_except_1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: singledeployment-sample-1
  namespace: system
spec:
  rules:
    - host: cloud.madongming.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: singledeployment-sample-1
                port:
                  number: 8080
  ingressClassName: nginx
