controllers/testdata/ingress_except_2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: singledeployment-sample-2
  namespace: default
spec:
  rules:
    - host: cloud-s.madongming.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: singledeployment-sample-2
                port:
                  number: 8080
  ingressClassName: nginx
