controllers/testdata/service_except_1.yaml
apiVersion: v1
kind: Service
metadata:
  name: singledeployment-sample-1
  namespace: system
spec:
  selector:
    app: singledeployment-sample-1
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
