controllers/testdata/service_except_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: singledeployment-sample-2
  namespace: default
spec:
  selector:
    app: singledeployment-sample-2
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
