controllers/testdata/service_except_ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: singledeployment-sample-ingress
  namespace: system
spec:
  selector:
    app: singledeployment-sample-ingress
  ports:
    - name: http
      protocol: TCP
      port: 30001
      targetPort: 80
